<resources>
    <string name="app_name">Quran 16 Line</string>
    <string name="action_settings">Settings</string>
    <string name="resume_btn">Resume</string>
    <string name="juz_btn">Juz</string>
    <string name="surah_btn">Surah</string>
    <string name="pg_num">Page</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_go">Go</string>
    <string name="dialog_hint">1-559</string>
    <string name="para1">1-Alif Lamm Meem</string>
    <string name="para2">2-Sayaqool</string>
    <string name="para3">3-Tilk ur Rusul</string>
    <string name="para4">4-Lun Tanaalu</string>
    <string name="para5">5-Wal Muhsanat</string>
    <string name="para6">6-La Yuhibullah</string>
    <string name="para7">7-Wa Iza Samiu</string>
    <string name="para8">8-WaLau Anana</string>
    <string name="para9">9-Qaal ul Malau</string>
    <string name="para10">10-Waalamu</string>
    <string name="para11">11-Yaataziroon</string>
    <string name="para12">12-Wama Min Daba</string>
    <string name="para13">13-Wama Ubareu</string>
    <string name="para14">14-Rubama</string>
    <string name="para15">15-Subhana Allazi</string>
    <string name="para16">16-Qaal Alam Aqul</string>
    <string name="para17">17-Iqtaraba</string>
    <string name="para18">18-Qad Aflah</string>
    <string name="para19">19-Waqaal Alazin</string>
    <string name="para20">20-Amman Khalaq</string>
    <string name="para21">21-Utlu Ma Uhiya</string>
    <string name="para22">22-Wamaan Yaqnut</string>
    <string name="para23">23-Wamaaliya</string>
    <string name="para24">24-Faman Azlamu</string>
    <string name="para25">25-Ilaihi Yuraddu</string>
    <string name="para26">26-Ha Meem</string>
    <string name="para27">27-Qaal Fama Khatbukum</string>
    <string name="para28">28-Qad Samiyallah</string>
    <string name="para29">29-Tabarak Alazi</string>
    <string name="para30">30-Amma Yatasaaloon</string>
    <string name="para1_a">الۗمّۗ</string>
    <string name="para2_a">سَيَقُولُ</string>
    <string name="para3_a">تِلْكَ الرُّسُلُ</string>
    <string name="para4_a">لَنْ تَنَالُوا</string>
    <string name="para5_a">وَالْمُحْصَنَاتُ</string>
    <string name="para6_a">لَا يُحِبُّ اللَّهُ</string>
    <string name="para7_a">وَإِذَا سَمِعُوا</string>
    <string name="para8_a">وَلَوْ أَنَّنَا</string>
    <string name="para9_a">قَالَ الْمَلَأ</string>
    <string name="para10_a">وَاعْلَمُوا</string>
    <string name="para11_a">يَعْتَذِرُونَ</string>
    <string name="para12_a">وَمَامِنْ دَابَّةٍ</string>
    <string name="para13_a">وَمَاأُبَرِّی</string>
    <string name="para14_a">رُبَمَا</string>
    <string name="para15_a">سُبْحَانَ الَّذِي</string>
    <string name="para16_a">قَالَ أَلَمْ</string>
    <string name="para17_a">اقْتَرَبَ</string>
    <string name="para18_a">قَدْ أَفْلَحَ</string>
    <string name="para19_a">وَقَالَ الَّذِينَ</string>
    <string name="para20_a">أَمَّنْ خَلَقَ</string>
    <string name="para21_a">اتْلُ مَا أُوحِيَ</string>
    <string name="para22_a">وَمَنْ يَقْنُتْ</string>
    <string name="para23_a">وَمَا لِيَ</string>
    <string name="para24_a">فَمَنْ أَظْلَمُ</string>
    <string name="para25_a">إِلَيْهِ يُرَدُّ</string>
    <string name="para26_a">حم</string>
    <string name="para27_a">قَالَ فَمَا خَطْبُكُمْ</string>
    <string name="para28_a">قَدْ سَمِعَ اللَّهُ</string>
    <string name="para29_a">تَبَارَكَ الَّذِي</string>
    <string name="para30_a">عَمَّ يَتَسَاءَلُونَ</string>
    <string name="sura1_a">سورة"    " الفاتحة</string>
    <string name="sura2_a">	سورة"    " البقرة</string>
    <string name="sura3_a">سورة"    " آل عمران</string>
    <string name="sura4_a">سورة"    " النساء</string>
    <string name="sura5_a">سورة"    " المائدة</string>
    <string name="sura6_a">سورة"    " الأنعام</string>
    <string name="sura7_a">سورة"    " الأعراف</string>
    <string name="sura8_a">سورة"    " الأنفال</string>
    <string name="sura9_a">سورة"    " التوبة</string>
    <string name="sura10_a">سورة"    " يونس</string>
    <string name="sura11_a">سورة"    " هود</string>
    <string name="sura12_a">سورة"    " يوسف</string>
    <string name="sura13_a">سورة"    " الرّعد</string>
    <string name="sura14_a">سورة"    " إبراهيم</string>
    <string name="sura15_a">سورة"    " الحجر</string>
    <string name="sura16_a">سورة"    " النحل</string>
    <string name="sura17_a">سورة"    " الإسراء</string>
    <string name="sura18_a">سورة"    " الكهف</string>
    <string name="sura19_a">سورة"    " مريم</string>
    <string name="sura20_a">سورة"    " طه</string>
    <string name="sura21_a">سورة"    " الأنبياء</string>
    <string name="sura22_a">سورة"    " الحج</string>
    <string name="sura23_a">سورة"    " المؤمنون</string>
    <string name="sura24_a">سورة"    " النّور</string>
    <string name="sura25_a">سورة"    " الفرقان</string>
    <string name="sura26_a">سورة"    " الشعراء</string>
    <string name="sura27_a">سورة"    " النمل</string>
    <string name="sura28_a">سورة"    " القصص</string>
    <string name="sura29_a">سورة"    " العنكبوت</string>
    <string name="sura30_a">سورة"    " الروم</string>
    <string name="sura31_a">سورة"    " لقمان</string>
    <string name="sura32_a">سورة"    " السجدة</string>
    <string name="sura33_a">سورة"    " الأحزاب</string>
    <string name="sura34_a">سورة"    " سبإ</string>
    <string name="sura35_a">سورة"    " فاطر</string>
    <string name="sura36_a">سورة"    " يس</string>
    <string name="sura37_a">سورة"    " الصّافّات</string>
    <string name="sura38_a">سورة"    " ص</string>
    <string name="sura39_a">سورة"    " الزمر</string>
    <string name="sura40_a">سورة"    " غافر</string>
    <string name="sura41_a">سورة"    " فصّلت</string>
    <string name="sura42_a">سورة"    " الشورى</string>
    <string name="sura43_a">سورة"    " الزخرف</string>
    <string name="sura44_a">سورة"    " الدخان</string>
    <string name="sura45_a">سورة"    " الجاثية</string>
    <string name="sura46_a">سورة"    " الأحقاف</string>
    <string name="sura47_a">سورة"    " محمّـد</string>
    <string name="sura48_a">سورة"    " الفتح</string>
    <string name="sura49_a">سورة"    " الحُـجُـرات</string>
    <string name="sura50_a">سورة"    " ق</string>
    <string name="sura51_a">سورة"    " الذاريات</string>
    <string name="sura52_a">سورة"    " الـطور</string>
    <string name="sura53_a">سورة"    " الـنحـم</string>
    <string name="sura54_a">سورة"    " الـقمـر</string>
    <string name="sura55_a">سورة"    " الـرحـمـن</string>
    <string name="sura56_a">سورة"    " الواقيـة</string>
    <string name="sura57_a">سورة"    " الحـديد</string>
    <string name="sura58_a">سورة"    " الـمجادلـة</string>
    <string name="sura59_a">سورة"    " الـحـشـر</string>
    <string name="sura60_a">سورة"    " الـمـمـتـحنة</string>
    <string name="sura61_a">سورة"    " الـصّـف</string>
    <string name="sura62_a">سورة"    " الـجـمـعـة</string>
    <string name="sura63_a">سورة"    " الـمنافقون</string>
    <string name="sura64_a">سورة"    " الـتغابن</string>
    <string name="sura65_a">سورة"    " الـطلاق</string>
    <string name="sura66_a">سورة"    " الـتحريم</string>
    <string name="sura67_a">سورة"    " الـملك</string>
    <string name="sura68_a">سورة"    " الـقـلـم</string>
    <string name="sura69_a">سورة"    " الـحاقّـة</string>
    <string name="sura70_a">سورة"    " الـمعارج</string>
    <string name="sura71_a">سورة"    " نوح</string>
    <string name="sura72_a">سورة"    " الجن</string>
    <string name="sura73_a">سورة"    " الـمـزّمّـل</string>
    <string name="sura74_a">سورة"    " الـمّـدّثّـر</string>
    <string name="sura75_a">سورة"    " الـقـيامـة</string>
    <string name="sura76_a">سورة"    " الإنسان</string>
    <string name="sura77_a">سورة"    " الـمرسلات</string>
    <string name="sura78_a">سورة"    " الـنبإ</string>
    <string name="sura79_a">سورة"    " الـنازعات</string>
    <string name="sura80_a">سورة"    " عبس</string>
    <string name="sura81_a">سورة"    " التكوير</string>
    <string name="sura82_a">سورة"    " الانفطار</string>
    <string name="sura83_a">سورة"    " المطـفـفين</string>
    <string name="sura84_a">سورة"    " الانشقاق</string>
    <string name="sura85_a">سورة"    " البروج</string>
    <string name="sura86_a">سورة"    " الـطارق</string>
    <string name="sura87_a">سورة"    " الأعـلى</string>
    <string name="sura88_a">سورة"    " الغاشـيـة</string>
    <string name="sura89_a">سورة"    " الفجر</string>
    <string name="sura90_a">سورة"    " الـبلد</string>
    <string name="sura91_a">سورة"    " الـشـمـس</string>
    <string name="sura92_a">سورة"    " اللـيـل</string>
    <string name="sura93_a">سورة"    " الضـحى</string>
    <string name="sura94_a">سورة"    " الـشرح</string>
    <string name="sura95_a">سورة"    " الـتين</string>
    <string name="sura96_a">سورة"    " الـعلق</string>
    <string name="sura97_a">سورة"    " الـقدر</string>
    <string name="sura98_a">سورة"    " الـبينة</string>
    <string name="sura99_a">سورة"    " الـزلزلة</string>
    <string name="sura100_a">سورة"    " الـعاديات</string>
    <string name="sura101_a">سورة"    " الـقارعـة</string>
    <string name="sura102_a">سورة"    " الـتكاثر</string>
    <string name="sura103_a">سورة"    " الـعصر</string>
    <string name="sura104_a">سورة"    " الـهمزة</string>
    <string name="sura105_a">سورة"    " الـفيل</string>
    <string name="sura106_a">سورة"    " قريش</string>
    <string name="sura107_a">سورة"    " المـاعون</string>
    <string name="sura108_a">سورة"    " الـكوثر</string>
    <string name="sura109_a">سورة"    " الـكافرون</string>
    <string name="sura110_a">سورة"    " الـنصر</string>
    <string name="sura111_a">سورة"    " الـمسد</string>
    <string name="sura112_a">سورة"    " الإخلاص</string>
    <string name="sura113_a">سورة"    " الـفلق</string>
    <string name="sura114_a">سورة"    " الـناس</string>
    <string name="sura1">1-Al-Fatihah</string>
    <string name="sura2">2-Al-Baqarah</string>
    <string name="sura3">3-Al Imran</string>
    <string name="sura4">4-An-Nisa\'</string>
    <string name="sura5">5-Al-Ma\'idah</string>
    <string name="sura6">6-Al-An\'am</string>
    <string name="sura7">7-Al-A\'raf</string>
    <string name="sura8">8-Al-Anfal</string>
    <string name="sura9">9-At-Tawbah</string>
    <string name="sura10">10-Yunus</string>
    <string name="sura11">11-Hud</string>
    <string name="sura12">12-Yusuf</string>
    <string name="sura13">13-Ar-Ra\'d</string>
    <string name="sura14">14-Ibraheem</string>
    <string name="sura15">15-Al-Hijr</string>
    <string name="sura16">16-An-Nahl</string>
    <string name="sura17">17-Al-Isra</string>
    <string name="sura18">18-Al-Kahf</string>
    <string name="sura19">19-Maryam</string>
    <string name="sura20">20-Ta-Ha</string>
    <string name="sura21">21-Al-Anbiya\'</string>
    <string name="sura22">22-Al-Hajj</string>
    <string name="sura23">23-Al-Mu\'minoon</string>
    <string name="sura24">24-An-Nur</string>
    <string name="sura25">25-Al-Furqan</string>
    <string name="sura26">26-Ash-Shu\`ara\'</string>
    <string name="sura27">27-An-Naml</string>
    <string name="sura28">28-Al-Qasas</string>
    <string name="sura29">29-Al-\`Ankabut</string>
    <string name="sura30">30-Ar-Rum</string>
    <string name="sura31">31-Luqman</string>
    <string name="sura32">32-As-Sajdah</string>
    <string name="sura33">33-Al-Ahzab</string>
    <string name="sura34">34-Saba\'</string>
    <string name="sura35">35-Fatir</string>
    <string name="sura36">36-Ya seen</string>
    <string name="sura37">37-As-Saffat</string>
    <string name="sura38">38-Sad</string>
    <string name="sura39">39-Az-Zumar</string>
    <string name="sura40">40-Ghafir</string>
    <string name="sura41">41-Fussilat</string>
    <string name="sura42">42-Ash-Shura</string>
    <string name="sura43">43-Az-Zukhruf</string>
    <string name="sura44">44-Ad-Dukhan</string>
    <string name="sura45">45-Al-Jathiyah</string>
    <string name="sura46">46-Al-Ahqaf</string>
</resources>