<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/quranbackground">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_intro_page">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/resume_btn"
                    android:text="@string/resume_btn"
                    android:onClick="Resume"
                    style="@style/IntroPgBtnTheme"
                    />


               <Button
                    android:id="@+id/surah_btn"
                    android:text="@string/surah_btn"
                   android:onClick="Surah"
                   style="@style/IntroPgBtnTheme"
                    />

                <Button
                    android:id="@+id/juz_btn"
                    android:text="@string/juz_btn"
                    android:onClick="Juz"
                    style="@style/IntroPgBtnTheme"
                    />

                <Button
                    android:id="@+id/pg_btn"
                    android:text="@string/pg_num"
                    android:onClick="Page"
                    style="@style/IntroPgBtnTheme"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1">

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>