<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/quranbackground">



    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Enter a Page Number"
        android:textColor="#bca301"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/etComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/dialog_hint"
        android:textColorHint="#38000000"
        android:inputType="number"
        android:minWidth="100dp"
        android:scrollbars="vertical" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="end">


        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:background="@color/quranbackground"
            android:textColor="#bca301" />

        <Button
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/quranbackground"
            android:text="@string/dialog_go"
            android:textColor="#bca301"/>
    </LinearLayout>

</LinearLayout>







